--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Product Map, Someday.</title>
     <style>
       #map {
-        width: 100%;
-        height: 900px;
+        width: 50%;
+        height: 400px;
+        display: inline-block;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
