--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
   </head>
   <body>
     <div id="map"></div>
@@ -35,5 +36,6 @@
         <button id="add-to-cart" name="add-to-cart">Add to Cart</button>
       </div>
     </div>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </body>
 </html>
