--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <div id="info">&nbsp;</div>
+    <div id="info" style="position: fixed; top: 0; float: left;">&nbsp;</div>
     <div id="pm-overlays" style="display: none;">
       <div id="search-overlay" class="search-overlay">
         <form id="search" action="" name="search">
