--- a/index.html
+++ b/index.html
@@ -2,40 +2,75 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Product Map, Someday.</title>
     <style>
       #map {
         width: 100%;
-        height: 960px;
+        height: auto;
         display: inline-block;
       }
     </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
   </head>
   <body>
+    <div id="data-tool" class="data-tool"></div>
     <div id="map"></div>
-    <div id="info" style="position: fixed; top: 0; float: left;">&nbsp;</div>
     <div id="pm-overlays" style="display: none;">
-      <div id="search-overlay" class="search-overlay">
-        <form id="search" action="" name="search">
-          <input type="text" name="search">
-          <button id="submit" type="submit">Search</button>
-        </form>
-      </div>
-      <div id="product-overlay" class="product-overlay">
-        <div id="product-image" class="product-image">
-          <img src="">
+      
+      <!-- Search -->
+      <div id="search-cart-overlay" class="search-cart-overlay">
+        <div id="search-bar" class="search-bar container shadow-sm border border-secondary rounded">
+          <div class="row">
+            <div id="search-bar" class="col-8 input-group my-3">
+              <input type="text" id="search-input" class="form-control" placeholder="Search for products">
+              <div class="input-group-append">
+                <button id="search-button" class="btn btn-outline-secondary" type="button">Search</button>
+              </div>
+            </div>
+            <div id="cart" class="col-4 my-3 cart">
+              <button id="cart-open-button" class="cart-open-button btn btn-secondary dropdown-toggle" type="button">Cart <span id="cart-count">&nbsp;</span>
+              </button>
+            </div>
+          </div>          
         </div>
-        <div id="product-info" class="product-info">
-          <div id="product-name" class="product-name"></div>
-          <div id="product-size" class="product-size"></div>
-          <div id="product-price" class="product-price"></div>
-        </div>
-        <button id="add-to-cart" name="add-to-cart">Add to Cart</button>
+        <div id="cart-contents" class="cart-contents container shadow-sm border border-secondary rounded mt-3"></div>
       </div>
+
+      <!-- Cart List Item -->
+      <div id="cart-item" class="media my-2">
+        <img class="cart-image align-self-center mr-3" src="/product-images/missing-item.jpg" />
+        <div class="media-body">
+          <div class="mt-3 cart-product-name"></div>
+        </div>
+      </div>
+
+      <!-- Product Card -->
+      <div id="product-overlay" class="product-overlay container shadow-sm border border-secondary rounded">
+        <div id="product-name" class="product-name h4"></div>
+        <div class="media">
+          <img id="product-image" class="product-image align-self-center" src="">
+          <div class="media-body">
+            <div id="product-info" class="product-info pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris laoreet tellus quis consectetur condimentum.</div>
+            <div id="product-price" class="product-price h4 py-2"></div>            
+            <button id="add-to-cart" class="d-block btn btn-outline-warning" name="add-to-cart">Add to Cart</button>
+            <a class="more d-block small pt-2">More...</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Add to Cart Icon -->
+      <button id="add-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
+
+
+      <!-- Remove from Cart Icon -->
+      <button id="remove-cart-icon" type="button" class="btn btn-primary remove-cart-icon">&#10006;</button>
     </div>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   </body>
 </html>
