--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </head>
   <body>
     <div id="data-tool" class="data-tool"></div>
-    <div id="jump-strips-border" class="jump-strips-border"></div>
     <div id="map"></div>
     <div id="pm-overlays" style="display: none;">
       
@@ -75,6 +74,11 @@
       <!-- Add to Cart Icon -->
       <button id="add-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
 
+      <!-- Signage -->
+      <button id="sign-0" class="sign btn btn-light btn-sm"></button>
+      <button id="sign-1" class="sign btn btn-light btn-sm"></button>
+      <button id="sign-2" class="sign btn btn-light btn-sm"></button>
+      <button id="sign-3" class="sign btn btn-light btn-sm"></button>
 
       <!-- Remove from Cart Icon -->
       <button id="remove-cart-icon" type="button" class="btn btn-primary remove-cart-icon">&#10006;</button>
