work on circle hover

--- a/index.html
+++ b/index.html
@@ -71,14 +71,18 @@
         </div>
       </div>
 
-      <!-- Add to Cart Icon -->
-      <button id="add-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
-
       <!-- Signage -->
       <button id="sign-0" class="sign btn btn-light btn-sm"></button>
       <button id="sign-1" class="sign btn btn-light btn-sm"></button>
       <button id="sign-2" class="sign btn btn-light btn-sm"></button>
       <button id="sign-3" class="sign btn btn-light btn-sm"></button>
+
+      <!-- Circle Hover Overlay -->
+      <div id="circle-hover" class="circle-hover"></div>
+      
+      <!-- Add to Cart Icon -->
+      <button id="add-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
+
 
       <!-- Remove from Cart Icon -->
       <button id="remove-cart-icon" type="button" class="btn btn-primary remove-cart-icon">&#10006;</button>
