--- a/index.html
+++ b/index.html
@@ -14,30 +14,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!--     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Oswald:300,400,700|Permanent+Marker|Rock+Salt" rel="stylesheet"> -->
     
   </head>
   <body>
     <!-- Navbar -->
-    <nav id="navbar-overlay" class="navbar-overlay navbar navbar-expand-lg navbar-light bg-light border-bottom border-secondary">
-      <a class="navbar-brand" href="#">F & O Greens</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="search-bar" class="col-8 input-group">
+    <nav id="navbar" class="navbar navbar-dark bg-dark py-2 navbar-expand-lg shadow-bottom border-bottom border-secondary row">
+      <div class="col-sm-4">
+        <a class="navbar-brand" href="#">F & O Market</a>
+      </div> 
+      <div id="search-bar" class="col-9 col-sm-6 mt-2 input-group">
         <input type="text" id="search-input" class="form-control" placeholder="Search for products">
         <div class="input-group-append">
-          <button id="search-button" class="btn btn-outline-secondary" type="button">Search</button>
+          <button id="search-button" class="btn btn-warning" type="button">Search</button>
         </div>
       </div>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Account</a>
-          </li>
-        </ul>
-      </div>
-      <div id="cart" class="dropdown cart">
-        <button id="cart-open-button" class="cart-open-button dropdown-toggle btn btn-secondary" data-toggle="dropdown" type="button">Cart <span id="cart-count">&nbsp;</span>
+      <div id="cart" class="col-3 col-sm-2  mt-2 dropdown cart">
+        <button id="cart-open-button" class="cart-open-button dropdown-toggle btn btn-warning" data-toggle="dropdown" type="button">Cart <span id="cart-count">&nbsp;</span>
         </button>
         <div id="cart-contents" class="cart-contents dropdown-menu dropdown-menu-right"></div>
       </div>
@@ -48,7 +41,7 @@
     <div id="map"></div>
     <div id="pm-overlays" style="display: none;">
 
-      <!-- Search -->
+      <!-- Search NOT USED-->
       <div id="search-cart-overlay" class="search-cart-overlay">
         <div id="search-bar" class="search-bar container shadow-sm border border-secondary rounded">
           <div class="row">
@@ -68,7 +61,7 @@
       </div>
 
       <!-- Cart List Item -- technically not an overlay -->
-      <div id="cart-item" class="media my-2">
+      <div id="cart-item" class="cart-item media my-2">
         <img class="cart-image align-self-center mr-3" src="/product-images/missing-item.jpg" />
         <div class="media-body">
           <div class="mt-3 cart-product-name"></div>
@@ -76,7 +69,7 @@
       </div>
 
       <!-- Product Card Overlay -->
-      <div id="product-card" class="product-card card shadow-sm border border-secondary rounded">
+      <div id="product-card" class="product-card card shadow-sm rounded">
         <img class="card-img-top product-image" src="./product-images/missing-item.jpg" alt="Product image">
         <div class="card-body">
           <a class="card-title product-name"></a>
@@ -87,6 +80,9 @@
 
       <!-- Product Overlay -->
       <div id="product-overlay" class="product-overlay container shadow-sm border border-secondary rounded">
+        <button id="detail-close-button" type="button" class="close" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <div id="product-name" class="product-name h4"></div>
         <div class="media">
           <img id="product-image" class="product-image align-self-center" src="">
