--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </nav>
     
 
-    <div id="data-tool" class="data-tool"></div>
+    <div id="data-tool" class="data-tool">
+      <div id="data-zoom"></div>
+      <div id="data-res"></div>
+      <div id="data-coord"></div>
+    </div>
     <div id="map"></div>
     <div id="pm-overlays" style="display: none;">
 
