--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Welcome to ConsumerLand!</h5>
+            <h4 class="modal-title" id="modal-label">Welcome to ConsumerLand!</h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <p>ConsumerLand is an experimental eCommerce UX built because of a nagging concern that we are doing online shopping, and especially online grocery shopping, wrong. 
-            <p>Virtually all online shopping today takes the "database lookup" approach: The user enters a search query, and are returned a list of results. To get different results, the user must enter a new query, returning a new set of results.</p><p>But shopping, and especially shopping for food -- i.e., hunting and gathering -- is an intuitive behavior tied to a sense of space and geography. We browse and roam across territory, double-back, and even go in circles. Whether that is the most efficient behavior is beside the point: It is our most instinctive.</p> 
-            <p>I called this prototype ConsumerLand because the eCommerce grocery store is a "land" -- or more accurately, a map of the land, a place where all of the things you could buy live, waiting for you to discover them.</p>
+            <p>Virtually all online shopping today takes the "database lookup" approach: The user enters a search query, and are returned a list of results. To get different results, the user must enter a new query, returning a new set of results.</p><p>But shopping, and especially shopping for food -- i.e., "hunting and gathering" -- is an intuitive behavior tied to a sense of space and geography. We browse and roam across territory, double-back, and even go in circles. Whether that is the most efficient behavior is beside the point: It is our most instinctive.</p> 
+            <p>I called this prototype ConsumerLand because this online grocery store is a "land" -- or more accurately, a map of the land, a place where all of the things you could buy live, waiting for you to discover them.</p>
             <p>I welcome all feedback and bug reports! Please email me at bcupham@gmail.com or click Contact in the main menu.</p>
             <p>This interface has not been extensively tested. <b>I recommend viewing on the latest version of Chrome only.</b></p> 
           </div>
