will try product preview control

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       </div>
     </div>
 
-
     <div id="data-tool" class="data-tool">
       <div id="data-zoom"></div>
       <div id="data-res"></div>
@@ -99,19 +98,19 @@
 
       <!-- Cart List Item -- technically not an overlay -->
       <div id="cart-item" class="cart-item media my-2">
-        <img class="cart-image align-self-center mr-3" src="/product-images/missing-item.jpg" />
+        <img class="cart-image align-self-center mr-3" src="./product-images/missing-item.jpg" />
         <div class="media-body">
           <div class="mt-3 cart-product-name"></div>
         </div>
       </div>
 
       <!-- Product Card Overlay -->
-      <div id="product-card" class="product-card card shadow-sm rounded">
+      <div id="product-preview" class="product-preview card shadow-sm rounded">
         <img class="card-img-top product-image" src="./product-images/missing-item.jpg" alt="Product image">
         <div class="card-body">
           <a class="card-title product-name"></a>
           <p class="card-text product-price"></p>
-          <button id="product-card-add-button" class="add-to-cart d-block btn btn-outline-warning btn-sm" name="add-to-cart">Add to Cart</button>
+          <button id="product-preview-add-button" class="add-to-cart d-block btn btn-outline-warning btn-sm" name="add-to-cart">Add to Cart</button>
         </div>
       </div>
 
