image relative scaling foundation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       }
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Oswald:300,400,700|Permanent+Marker|Rock+Salt" rel="stylesheet">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Bungee+Shade|Carter+One|Libre+Barcode+39+Extended+Text|Libre+Barcode+39+Text|Londrina+Solid|Poiret+One|Racing+Sans+One|Shrikhand|Special+Elite|Spicy+Rice" rel="stylesheet">
     
   </head>
   <body>
@@ -80,8 +80,8 @@
             <p>Virtually all online shopping today takes the "database look up" approach: The user enters a search query, and are returned a list of results. To get different results, the user must enter a new query, returning a new set of results.</p><p>But shopping is an intuitive behavior tied to a sense of space and geography. We "hunt and gather". We browse and roam across territory taking a meandering path.</p> 
             <p>So I asked myself, "What if there was a way to mimic this experience on a webpage?" And ConsumerLand is what I came up with.</p> 
             <p>I called this prototype ConsumerLand because this online grocery store is a "land" -- or more accurately, a map of the land. ConsumerLand is where all of the things you could buy live, waiting for you to discover them.</p>
-            <h4 class="alert alert-secondary permanent-marker">I'd Love Your Feedback</h4>
-            <p>I welcome all feedback and bug reports! Please email me at bcupham@gmail.com or click Contact in the main menu.</p>
+            <h4 class="alert alert-secondary permanent-marker">I'd Love Your Feedback!</h4>
+            <p>Is there some feature that you'd like to see? Something obviously missing? Something you especially love? Please email me at bcupham@gmail.com or click Contact in the main menu.</p>
             <p>This interface has not been cross-browser tested yet. I recommend viewing on the latest version of Chrome only.</p> 
           </div>
           <div class="modal-footer">
