--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ConsumerLand</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet"> -->
     <style>
       #map {
@@ -102,6 +102,7 @@
       <div id="data-res"></div>
       <div id="data-coord"></div>
     </div>
+    <div class="loading">Loading...</div>
     <div id="map"></div>
     <div id="pm-overlays" style="display: none;">
 
@@ -173,7 +174,7 @@
       <button id="sign-3" class="sign btn btn-light btn-sm"></button>
 
       <!-- Add to Cart Icon -->
-      <button id="add-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
+      <button id="add-to-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
 
 
       <!-- Remove from Cart Icon -->
