add/remove icon in progress

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <button id="sign-3" class="sign btn btn-light btn-sm"></button>
 
       <!-- Add to Cart Icon -->
-      <button id="add-to-cart-icon" type="button" class="btn btn-primary add-cart-icon">&#10010;</button>
+      <button id="add-to-cart-icon" type="button" class="btn btn-primary add-to-cart-icon">&#10010;</button>
 
 
       <!-- Remove from Cart Icon -->
