--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
       <!-- Remove from Cart Icon -->
-      <button id="remove-cart-icon" type="button" class="btn btn-primary remove-cart-icon">&#10006;</button>
+      <button id="remove-cart-icon" type="button" class="btn btn-primary remove-from-cart-icon">&#10006;</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
