added item add/remove icon buttons

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       </div>
 
-      <!-- Product Overlay -->
+      <!-- Product Detail Overlay -->
       <div id="product-overlay" class="product-overlay container shadow-sm border border-secondary rounded">
         <button id="detail-close-button" type="button" class="close" aria-label="Close">
           <span aria-hidden="true">&times;</span>
